# qt_cmake_library

./: .gitignore  README.md
MySharedLib/: CMakeLists.txt  mysharedlib.cpp  mysharedlib.h
TestSharedLib/: CMakeLists.txt  main.cpp
